
  [ Timo Jyrinki ]
  * Update debian/copyright.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream release.
    - Bump Qt build dependencies.
  * Clear up the list in Uploaders removing people who hasn't committed to the
    repo in more than a year. They can re add themselves whenever they want
    (and we really hope to see you back really soon!).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 04 Mar 2015 12:52:23 +0000

qtsvg-opensource-src (5.4.1-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.4.1.
  * Update watch file to qt.io
  * Mark symbols missing with GCC 5 as optional (Closes: #778094).
  * debian/mark-private-symbols.sh:
    - Strip trailing colon from symbols names.
    - Unmark private symbols before processing them.

 -- Timo Jyrinki <timo@debian.org>  Wed, 04 Mar 2015 09:47:42 +0000

qtsvg-opensource-src (5.4.0-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.4.0.
  * Build-depend on qtbase5-doc-html, for linking docs.
  * Update debian/copyright.
  * Bump Standards-Version to 3.9.6, no changes needed.
  * Update Vcs-Browser field to use cgit interface.
  * Update ABI version (qtsvg-abi-5-4-0).
  * Re-enable running tests during build.
  * Add myself to Uploaders.

  [ Timo Jyrinki ]
  * Update libqt5svg5.symbols.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 26 Dec 2014 13:41:30 +0300

qtsvg-opensource-src (5.3.2-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 23 Sep 2014 00:12:47 -0300

qtsvg-opensource-src (5.3.2-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * Set QT_QPA_PLATFORM=minimal when running tests, so that they
    can be run without Xvfb.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream release.
  * Bump Qt build dependencies.
  * Update symbols files with buildd's logs.
