@@ -9,6 +9,7 @@ qtsvg-opensource-src (5.4.2-1) UNRELEASED; urgency=medium
   * Clear up the list in Uploaders removing people who hasn't committed to the
     repo in more than a year. They can re add themselves whenever they want
     (and we really hope to see you back really soon!).
+  * Use pkgkde-mark-private-symbols from pkg-kde-tools' 0.15.17.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 04 Mar 2015 12:52:23 +0000
 
